--- a/locais/templates/locais/update.html
+++ b/locais/templates/locais/update.html
@@ -4,22 +4,7 @@
 <h2>Update</h2>
 <form action="" method="post">
     {% csrf_token %}
-    <p>
-        <label for="title">Title:</label>
-        <input type="text" name="title" id="title" value="{{ locais.title }}">
-    </p>
-    <p>
-        <label for="place">Place:</label>
-        <input type="text" name="place" id="place" value="{{ locais.place }}">
-    </p>
-    <p>
-        <label for="content">Content:</label>
-        <input type="text" name="content" id="content" value="{{ locais.content }}">
-    </p>
-    <p>
-        <label for="image_url">Image URL:</label>
-        <input type="text" name="image_url" id="image_url" value="{{ locais.image_url }}">
-    </p>
+    {{ form.as_p }}
     <p>
         <button type="submit">Update</button>
     </p>
