--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
                     <li>
                         <a class="nav-link" href="{% url 'locais:lista_locais' %}">Locais</a>
                     </li>
+                    <li>
+                        <a class="nav-link" href="{% url 'locais:category_list' %}">Categorias</a>
+                    </li>
                 </ul>
             </div>
         </div>
