--- a/locais/templates/locais/detail.html
+++ b/locais/templates/locais/detail.html
@@ -9,7 +9,7 @@
 </ul> 
 <p>{{ locais.place }}</p>
 <p>{{ locais.content }}</p>
-<p>{{ locais.image_url }}</p>
+<img src="{{ locais.image_url }}" alt="">
 <a href="{% url 'locais:update_locais' locais.pk %}" class="btn btn-primary">Update</a>
 <a href="{% url 'locais:delete_locais' locais.pk %}" class="btn btn-danger">Delete</a>
 <h2>Comentários</h2>
